// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drop align left left 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: bottom left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; bottom: 768px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align left left 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop align left right top bottom 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align left right top bottom 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop align right left top top 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align right left top top 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop align right right 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align right right 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop align right right bottom top 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align right right bottom top 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop align right right bottom top 3`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop align right right bottom top 4`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop background 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #33333310;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #33333310;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop background 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop basic 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop basic 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop close 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop close 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop default elevation renders 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop default elevation renders 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop elevation 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 10px;
  position: fixed;
  z-index: 15;
  outline: none;
  background-color: #33333310;
  color: #444444;
  margin: 6px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop elevation 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop invalid align 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop invalid align 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop invoke onClickOutside 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop invoke onClickOutside 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop margin 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin: 12px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop margin 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop no stretch 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop no stretch 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop plain 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: fixed;
  z-index: 20;
  outline: none;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop plain 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop resize 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop resize 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop restrict focus 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop restrict focus 2`] = `
<div
  class="StyledBox-sc-13pk1d4-0 bgHyOV StyledDrop-sc-16s5rx8-0 fSvtXX"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop restrict focus 3`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop restrict focus 4`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<body />
`;

exports[`Drop round 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 100%;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 100%;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop round 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div>
  <div
    aria-hidden="true"
    class="c0"
  >
    <input
      aria-label="test"
      data-g-tabindex="none"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"bottom","left":"right"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-left: 12px;
  opacity: 0;
  transform-origin: bottom left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; bottom: 1000px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"bottom","left":"right"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"bottom","right":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-left: -12px;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; bottom: 1000px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"bottom","right":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","left":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-bottom: 12px;
  opacity: 0;
  transform-origin: bottom left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","left":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","left":"right"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-bottom: 12px;
  margin-left: 12px;
  opacity: 0;
  transform-origin: bottom left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","left":"right"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","right":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-bottom: 12px;
  margin-left: -12px;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","right":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","right":"left"} 3`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-bottom: 12px;
  margin-left: -12px;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"bottom":"top","right":"left"} 4`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"right":"right","bottom":"top"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-bottom: 12px;
  opacity: 0;
  transform-origin: bottom right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 0px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"right":"right","bottom":"top"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","left":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-top: 12px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","left":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","left":"right"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-top: 12px;
  margin-left: 12px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","left":"right"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","right":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-top: 12px;
  margin-left: -12px;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","right":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","right":"right"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-top: 12px;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom","right":"right"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-top: 12px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"bottom"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"top","left":"right"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-left: 12px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"top","left":"right"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"top","right":"left"} 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  margin-left: -12px;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="margin-drop-test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop should render correct margin depending on value of align: 
    {"top":"top","right":"left"} 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop stretch = align 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  test test test test test test test test test test test test test test
</div>
`;

exports[`Drop stretch = align 2`] = `
".bgHyOV {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.fSvtXX {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`Drop theme elevation renders 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 10px;
  position: fixed;
  z-index: 15;
  outline: none;
  background-color: #33333310;
  color: #444444;
  margin: 6px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
  tabindex="-1"
>
  this is a test
</div>
`;

exports[`Drop theme elevation renders 2`] = `
"@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .fSvtXX {
    display: flex;
    align-items: stretch;
  }
}"
`;

exports[`inline 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<button
  aria-label="test"
  data-testid="drop-button"
>
  <span>
    click
  </span>
  <div
    style="position: absolute; height: 1px; left: 0px; right: 0px; top: 0px;"
    tabindex="0"
  />
  <div
    aria-hidden="false"
  >
    <div
      class="c0 c1"
      data-g-portal-id="0"
      id="drop-node"
      style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
      tabindex="-1"
    >
      this is a test
    </div>
  </div>
  <div
    style="position: absolute; height: 1px; left: 0px; right: 0px; bottom: 0px;"
    tabindex="0"
  />
</button>
`;
